--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,11 @@
         "yiisoft/yii2": ">=2.0.6",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-        "dmstr/yii2-adminlte-asset": "2.*"
+        "dmstr/yii2-adminlte-asset": "2.*",
+        "kartik-v/yii2-krajee-base": "^1.8",
+        "kartik-v/yii2-widget-activeform": "^1.4",
+        "kartik-v/yii2-grid": "^3.1",
+        "kartik-v/yii2-builder": "^1.6"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
